--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>Etch-a-Sketch</h1>
+    <div class="flex-container">
+        <button id="clear">
+            Clear
+        </button>
+    </div>
     <div id="cont">
         
     </div>
